基础功能代码提交

--- a/WebContent/static/css/themes/icon.css
+++ b/WebContent/static/css/themes/icon.css
@@ -124,5 +124,8 @@
 .icon-database{
 	background:url('icons/database.png') no-repeat center center;
 }
+.icon-application{
+	background:url('icons/application.png') no-repeat center center;
+}
 
 
